--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -64,6 +64,7 @@ jobs:
       ENV: dev
       DBHOST: lemonke-dbsrv-dev.postgres.database.azure.com
       DBNAME: lemonke-db-dev
+      BACK_END_REPO: https://github.com/gabrieldeolaguibel/DevOps-Banking-Backend
     steps:
       - uses: actions/checkout@main
       - uses: azure/login@v1
@@ -75,7 +76,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
+          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} BERepo=${{env.BACK_END_REPO}} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.dev
           failOnStdErr: false
       - name: Deploy Dev Diagnostics
@@ -98,6 +99,7 @@ jobs:
       ENV: uat
       DBHOST: lemonke-dbsrv-uat.postgres.database.azure.com
       DBNAME: lemonke-db-uat
+      BACK_END_REPO: https://github.com/gabrieldeolaguibel/DevOps-Banking-Backend
     steps:
       - uses: actions/checkout@main
       - uses: azure/login@v1
@@ -109,7 +111,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
+          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} BERepo=${{env.BACK_END_REPO}} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.uat
           failOnStdErr: false
       - name: Deploy UAT Diagnostics
@@ -132,6 +134,7 @@ jobs:
       ENV: prod
       DBHOST: lemonke-dbsrv-prod.postgres.database.azure.com
       DBNAME: lemonke-db-prod
+      BACK_END_REPO: https://github.com/gabrieldeolaguibel/DevOps-Banking-Backend
     steps:
       - uses: actions/checkout@main
       - uses: azure/login@v1
@@ -143,7 +146,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
+          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} BERepo=${{env.BACK_END_REPO}} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.prod
           failOnStdErr: false
       - name: Deploy PROD Diagnostics
